--- a/Views/PreFireViewController/PreFireViewController.storyboard
+++ b/Views/PreFireViewController/PreFireViewController.storyboard
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tAH-Ij-2NC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14799.2"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Pre Fire View Controller-->
-        <scene sceneID="XBs-S6-72d">
+        <scene sceneID="wyI-DR-weD">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="tAH-Ij-2NC" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RPd-nm-hYZ">
+                <viewController storyboardIdentifier="boom" id="uGH-Lw-WHL" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pNa-rg-xRu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JVY-CB-3gB">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CXq-iY-LHb">
                                 <rect key="frame" x="20" y="44" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" red="0.60788255710000005" green="0.62530738340000003" blue="0.58675157909999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="delete"/>
                                 <connections>
-                                    <action selector="close:" destination="tAH-Ij-2NC" eventType="touchUpInside" id="K2v-AK-8LB"/>
-                                    <action selector="closeTapped:" destination="tAH-Ij-2NC" eventType="touchUpInside" id="gkq-xV-6vO"/>
+                                    <action selector="closeTapped:" destination="uGH-Lw-WHL" eventType="touchUpInside" id="XDX-DJ-D6G"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSY-Pm-bSx" customClass="CountdownProgressBar" customModule="RealmTimers" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wJV-zb-dMd" customClass="CountdownProgressBar" customModule="RealmTimers" customModuleProvider="target">
                                 <rect key="frame" x="19" y="239" width="376" height="375"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAG-ww-Qqc">
+                                <rect key="frame" x="20" y="418" width="375" height="60"/>
+                                <fontDescription key="fontDescription" name="HoeflerText-Regular" family="Hoefler Text" pointSize="60"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="PreViolet"/>
                         <constraints>
-                            <constraint firstItem="kSY-Pm-bSx" firstAttribute="top" secondItem="b15-2T-0IT" secondAttribute="top" constant="195" id="bBt-LN-3By"/>
-                            <constraint firstItem="kSY-Pm-bSx" firstAttribute="leading" secondItem="b15-2T-0IT" secondAttribute="leading" constant="19" id="dnV-c4-f3D"/>
-                            <constraint firstItem="kSY-Pm-bSx" firstAttribute="centerY" secondItem="RPd-nm-hYZ" secondAttribute="centerY" constant="-21.5" id="hYP-N3-F0Y"/>
-                            <constraint firstItem="kSY-Pm-bSx" firstAttribute="centerX" secondItem="RPd-nm-hYZ" secondAttribute="centerX" id="luL-RB-Ms0"/>
+                            <constraint firstItem="wJV-zb-dMd" firstAttribute="centerY" secondItem="pNa-rg-xRu" secondAttribute="centerY" constant="-21.5" id="2WS-0r-ytT"/>
+                            <constraint firstItem="sAG-ww-Qqc" firstAttribute="centerX" secondItem="pNa-rg-xRu" secondAttribute="centerX" id="FTf-Yp-1yd"/>
+                            <constraint firstItem="wJV-zb-dMd" firstAttribute="leading" secondItem="UqN-PK-VlO" secondAttribute="leading" constant="19" id="MNm-eT-ccX"/>
+                            <constraint firstItem="sAG-ww-Qqc" firstAttribute="centerY" secondItem="pNa-rg-xRu" secondAttribute="centerY" id="dW3-1U-YMa"/>
+                            <constraint firstItem="wJV-zb-dMd" firstAttribute="centerX" secondItem="pNa-rg-xRu" secondAttribute="centerX" id="fYk-0W-uIZ"/>
+                            <constraint firstItem="wJV-zb-dMd" firstAttribute="top" secondItem="UqN-PK-VlO" secondAttribute="top" constant="195" id="xzu-Ky-Kvv"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="b15-2T-0IT"/>
+                        <viewLayoutGuide key="safeArea" id="UqN-PK-VlO"/>
                     </view>
+                    <connections>
+                        <outlet property="pfDuration" destination="sAG-ww-Qqc" id="OUk-ET-wvB"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9F2-7H-dGJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qTh-b3-Mk4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6279.7101449275369" y="108.48214285714285"/>
+            <point key="canvasLocation" x="6255.072463768116" y="108.48214285714285"/>
         </scene>
     </scenes>
     <resources>
         <image name="delete" width="50" height="50"/>
+        <namedColor name="PreViolet">
+            <color red="0.45490196078431372" green="0.21176470588235294" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
