--- a/Views/PreFireViewController/PreFireViewController.storyboard
+++ b/Views/PreFireViewController/PreFireViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14799.2"/>
@@ -19,7 +19,7 @@
             <objects>
                 <viewController storyboardIdentifier="boom" id="uGH-Lw-WHL" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pNa-rg-xRu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CXq-iY-LHb">
@@ -32,40 +32,43 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wJV-zb-dMd" customClass="CountdownProgressBar" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="19" y="239" width="376" height="375"/>
+                                <rect key="frame" x="19" y="195" width="337" height="234"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAG-ww-Qqc">
-                                <rect key="frame" x="20" y="383" width="375" height="131"/>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="present" translatesAutoresizingMaskIntoConstraints="NO" id="0hj-Mw-lyv">
+                                <rect key="frame" x="5" y="154" width="374" height="375"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <gestureRecognizers/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1DX-qp-Xhc">
+                                <rect key="frame" x="67" y="213" width="240" height="240"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAG-ww-Qqc">
+                                <rect key="frame" x="0.0" y="268" width="375" height="131"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="60"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="present" translatesAutoresizingMaskIntoConstraints="NO" id="0hj-Mw-lyv">
-                                <rect key="frame" x="20" y="239" width="374" height="375"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" name="PreViolet"/>
                         <constraints>
                             <constraint firstItem="wJV-zb-dMd" firstAttribute="centerY" secondItem="pNa-rg-xRu" secondAttribute="centerY" constant="-21.5" id="2WS-0r-ytT"/>
-                            <constraint firstItem="sAG-ww-Qqc" firstAttribute="centerX" secondItem="pNa-rg-xRu" secondAttribute="centerX" id="FTf-Yp-1yd"/>
                             <constraint firstItem="wJV-zb-dMd" firstAttribute="leading" secondItem="UqN-PK-VlO" secondAttribute="leading" constant="19" id="MNm-eT-ccX"/>
-                            <constraint firstItem="0hj-Mw-lyv" firstAttribute="centerY" secondItem="sAG-ww-Qqc" secondAttribute="centerY" constant="-22" id="OOk-FY-oUH"/>
-                            <constraint firstItem="0hj-Mw-lyv" firstAttribute="leading" secondItem="UqN-PK-VlO" secondAttribute="leading" constant="20" id="RNC-FV-ARv"/>
-                            <constraint firstItem="sAG-ww-Qqc" firstAttribute="centerY" secondItem="pNa-rg-xRu" secondAttribute="centerY" id="dW3-1U-YMa"/>
-                            <constraint firstItem="0hj-Mw-lyv" firstAttribute="centerX" secondItem="sAG-ww-Qqc" secondAttribute="centerX" id="fOh-iY-gA4"/>
                             <constraint firstItem="wJV-zb-dMd" firstAttribute="centerX" secondItem="pNa-rg-xRu" secondAttribute="centerX" id="fYk-0W-uIZ"/>
-                            <constraint firstItem="0hj-Mw-lyv" firstAttribute="top" secondItem="UqN-PK-VlO" secondAttribute="top" constant="195" id="lwm-Lg-YPI"/>
                             <constraint firstItem="wJV-zb-dMd" firstAttribute="top" secondItem="UqN-PK-VlO" secondAttribute="top" constant="195" id="xzu-Ky-Kvv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UqN-PK-VlO"/>
                     </view>
                     <connections>
+                        <outlet property="characterImage" destination="1DX-qp-Xhc" id="pKA-eh-cFk"/>
                         <outlet property="pfDuration" destination="sAG-ww-Qqc" id="OUk-ET-wvB"/>
                         <outlet property="presentView" destination="0hj-Mw-lyv" id="RQx-Qu-fkE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qTh-b3-Mk4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="zcS-op-PAE"/>
             </objects>
             <point key="canvasLocation" x="6255.072463768116" y="108.48214285714285"/>
         </scene>
