--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -22,6 +22,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bonfire" translatesAutoresizingMaskIntoConstraints="NO" id="Ish-16-9vX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gzK-32-aT1">
                                 <rect key="frame" x="0.0" y="105" width="375" height="562"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -36,27 +40,34 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RkT-oD-0UV">
                                                     <rect key="frame" x="15" y="11" width="345" height="108"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8:54 PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDI-1e-Y3J">
-                                                            <rect key="frame" x="8" y="12" width="358" height="64"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8:54 PM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDI-1e-Y3J">
+                                                            <rect key="frame" x="167" y="12" width="178" height="64"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="358" id="Vky-fO-ZvV"/>
+                                                                <constraint firstAttribute="width" constant="178" id="Vky-fO-ZvV"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="50"/>
-                                                            <nil key="textColor"/>
+                                                            <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="30"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 min" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0V-qu-6qb">
-                                                            <rect key="frame" x="8" y="70" width="358" height="21"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0V-qu-6qb">
+                                                            <rect key="frame" x="167" y="70" width="178" height="21"/>
                                                             <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="18"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHb-Ox-rMI">
+                                                            <rect key="frame" x="8" y="12" width="151" height="28"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="22"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" name="PastelGreenColor"/>
+                                                    <color key="backgroundColor" white="0.33333333329999998" alpha="0.6832911532" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="UDI-1e-Y3J" secondAttribute="trailing" constant="-21" id="5kC-fN-L3F"/>
+                                                        <constraint firstAttribute="trailing" secondItem="UDI-1e-Y3J" secondAttribute="trailing" id="5kC-fN-L3F"/>
                                                         <constraint firstItem="h0V-qu-6qb" firstAttribute="top" secondItem="RkT-oD-0UV" secondAttribute="top" constant="70" id="69D-dp-sHf"/>
-                                                        <constraint firstItem="UDI-1e-Y3J" firstAttribute="leading" secondItem="RkT-oD-0UV" secondAttribute="leadingMargin" id="8s2-YN-WBt"/>
+                                                        <constraint firstItem="UDI-1e-Y3J" firstAttribute="leading" secondItem="RkT-oD-0UV" secondAttribute="leadingMargin" constant="159" id="8s2-YN-WBt"/>
                                                         <constraint firstAttribute="bottom" secondItem="UDI-1e-Y3J" secondAttribute="bottom" constant="32" id="LJg-Ew-5aI"/>
                                                         <constraint firstItem="UDI-1e-Y3J" firstAttribute="top" secondItem="RkT-oD-0UV" secondAttribute="top" constant="12" id="WRy-7A-vvm"/>
                                                         <constraint firstItem="UDI-1e-Y3J" firstAttribute="trailing" secondItem="h0V-qu-6qb" secondAttribute="trailing" id="hYd-8l-UYY"/>
@@ -77,12 +88,13 @@
                                             <outlet property="cardView" destination="RkT-oD-0UV" id="eBP-Ec-4S9"/>
                                             <outlet property="nameLabel" destination="UDI-1e-Y3J" id="2WU-NO-H32"/>
                                             <outlet property="preFireLabel" destination="h0V-qu-6qb" id="qBY-SE-1Wa"/>
+                                            <outlet property="timerNameLabel" destination="QHb-Ox-rMI" id="9sX-qw-7QI"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJx-Ns-lcb">
-                                <rect key="frame" x="229" y="761" width="120" height="120"/>
+                                <rect key="frame" x="289" y="761" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="fab">
@@ -160,15 +172,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bonfire" width="3248" height="4872"/>
         <image name="fab" width="60" height="60"/>
         <namedColor name="DarkBackgroundColor">
             <color red="0.0078431372549019607" green="0.054901960784313725" blue="0.20784313725490197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DeleteColor">
             <color red="0.90980392156862744" green="0.38823529411764707" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="PastelGreenColor">
-            <color red="0.61176470588235299" green="0.8901960784313725" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PinkAccentColor">
             <color red="1" green="0.50588235294117645" blue="0.63137254901960782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
